--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "postcss-loader": "^3.0.0",
     "pug": "^2.0.4",
     "pug-loader": "^2.4.0",
+    "resolve-url-loader": "^3.1.1",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
     "ts-jest": "^25.3.1",
